<resources>
    <string name="app_name">FlappyXY</string>

    <string name="action_settings">Settings</string>
    <string name="sensor_x_text">accell_x</string>
    <string name="sensor_y_text">accell_y</string>
    <string name="answer_x_text">answer_x</string>
    <string name="answer_y_text">answer_x</string>
    <string name="count_down">CountStart</string>
    <string name="adjust">Adjust!</string>
    <string name="start_time">0</string>
    <string name="start_game_time">3</string>
    <string name="start_message">Start</string>
    <string name="result_message">Game Over</string>
    <string name="start_button">Start</string>
    <string name="ranking">Ranking</string>
    <string name="clear_count">0</string>
    <string name="clear_count_label">Clear : </string>
    <string name="you">You</string>
    <string name="header_rank">Rank</string>
    <string name="header_name">Name</string>
    <string name="header_clear_count">Clear</string>
    <string name="regist">登録</string>
</resources>
